araglado el bug de z-index en safari

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ header {
   align-items: center;
   padding: 2rem;
   border-bottom: 4px solid var(--third);
-  z-index: 10000;
+  z-index: 10;
 }
 
 .logotipo {
